Simple Drag/Drop API

--- a/index.html
+++ b/index.html
@@ -9,24 +9,22 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="./styles.css" />
   </head>
   <body>
-    <h1 id="info">Registration!</h1>
-
-    <div id="reg">
-      <input
-        type="text"
-        name="fName"
-        placeholder="Name" />
-      <input
-        type="text"
-        name="lName"
-        placeholder="Lastname" />
-      <input
-        type="button"
-        id="regBtn"
-        value="Register" />
-    </div>
+    <div
+      class="box"
+      id="pos1"></div>
+    <div
+      class="box"
+      id="pos2"></div>
+    <p
+      id="drag"
+      draggable="true">
+      Drag me
+    </p>
     <script src="./main.js"></script>
   </body>
 </html>
