Repeat and tagged template literal

--- a/index.html
+++ b/index.html
@@ -14,17 +14,20 @@
       href="./styles.css" />
   </head>
   <body>
-    <div
-      class="box"
-      id="pos1"></div>
-    <div
-      class="box"
-      id="pos2"></div>
-    <p
-      id="drag"
-      draggable="true">
-      Drag me
-    </p>
+    <div>
+      <input
+        type="text"
+        name="fName"
+        placeholder="First Name" />
+      <input
+        type="text"
+        name="lName"
+        placeholder="Las Name" />
+    </div>
+    <input
+      type="button"
+      name="submitBtn"
+      value="Submit" />
     <script src="./main.js"></script>
   </body>
 </html>
